--- a/appendix-08-terminology.html
+++ b/appendix-08-terminology.html
@@ -172,7 +172,7 @@
 <table><thead><tr><th>English 英文</th><th>Traditional Chinese 正體中文</th><th>Note 備註</th></tr></thead><tbody>
 <tr><td>Abstract Syntax Tree</td><td>抽象語法樹</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E6%8A%BD%E8%B1%A1%E8%AA%9E%E6%B3%95%E6%A8%B9">維基百科</a></td></tr>
 <tr><td>ahead-of-time compiled</td><td>預先編譯</td><td></td></tr>
-<tr><td>annotations</td><td>註釋</td><td></td></tr>
+<tr><td>annotations</td><td>詮釋</td><td></td></tr>
 <tr><td>argument</td><td>引數</td><td></td></tr>
 <tr><td>arity</td><td>元數</td><td>所需運算元的數量。參考：<a href="https://zh.wikipedia.org/zh-tw/%E5%85%83%E6%95%B0">維基百科</a></td></tr>
 <tr><td>array</td><td>陣列</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E6%95%B0%E7%BB%84">維基百科</a></td></tr>
@@ -245,10 +245,11 @@
 <tr><td>overloading</td><td>重載</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E5%87%BD%E6%95%B0%E9%87%8D%E8%BD%BD">維基百科</a></td></tr>
 <tr><td>ownership</td><td>所有權</td><td></td></tr>
 <tr><td>package</td><td>套件</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E8%BD%AF%E4%BB%B6%E5%8C%85">維基百科</a></td></tr>
+<tr><td>panic</td><td>恐慌</td><td></td></tr>
 <tr><td>parse</td><td>分析、分析語法</td><td></td></tr>
 <tr><td>parser</td><td>語法分析器</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E8%AA%9E%E6%B3%95%E5%88%86%E6%9E%90%E5%99%A8">維基百科</a></td></tr>
 <tr><td>pattern</td><td>模式</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F_(%E8%AE%A1%E7%AE%97%E6%9C%BA)">維基百科</a></td></tr>
-<tr><td>pattern matching</td><td>模式</td><td>參考：<a href="http://www.iicm.org.tw/term/termb_P.htm">中華民國資訊學會</a></td></tr>
+<tr><td>pattern matching</td><td>模式配對</td><td>參考：<a href="http://www.iicm.org.tw/term/termb_P.htm">中華民國資訊學會</a></td></tr>
 <tr><td>plugins</td><td>外掛</td><td></td></tr>
 <tr><td>pointer</td><td>指標</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E6%8C%87%E6%A8%99_(%E9%9B%BB%E8%85%A6%E7%A7%91%E5%AD%B8)">維基百科</a></td></tr>
 <tr><td>polymorphism</td><td>多型</td><td>參考：<a href="https://zh.wikipedia.org/wiki/%E5%A4%9A%E5%9E%8B_(%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%A7%91%E5%AD%A6)">維基百科</a></td></tr>
@@ -256,8 +257,10 @@
 <tr><td>profile</td><td>設定檔</td><td></td></tr>
 <tr><td>reference</td><td>參照、參考</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E5%8F%83%E7%85%A7">維基百科</a></td></tr>
 <tr><td>round bracket</td><td>圓括號</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E6%8B%AC%E5%8F%B7">維基百科</a></td></tr>
+<tr><td>runtime</td><td>執行時</td><td></td></tr>
+<tr><td>scalar</td><td>純量</td><td></td></tr>
 <tr><td>scope</td><td>有效範圍</td><td></td></tr>
-<tr><td>section</td><td>片段</td><td></td></tr>
+<tr><td>section</td><td>段落</td><td></td></tr>
 <tr><td>semantics</td><td>語意</td><td></td></tr>
 <tr><td>segment</td><td>區段</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E8%A8%98%E6%86%B6%E9%AB%94%E5%88%86%E6%AE%B5">維基百科</a></td></tr>
 <tr><td>segmentation fault</td><td>記憶體區段錯誤</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E8%A8%98%E6%86%B6%E9%AB%94%E5%8D%80%E6%AE%B5%E9%8C%AF%E8%AA%A4">維基百科</a></td></tr>
@@ -274,7 +277,7 @@
 <tr><td>syntax</td><td>語法</td><td></td></tr>
 <tr><td>thread</td><td>執行緒</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E7%BA%BF%E7%A8%8B">維基百科</a></td></tr>
 <tr><td>trait</td><td>特徵</td><td>參考：<a href="https://zh.wikipedia.org/wiki/Traits_%28%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%A7%91%E5%AD%A6%29">維基百科</a></td></tr>
-<tr><td>tuple</td><td>多元組</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E5%A4%9A%E5%85%83%E7%BB%84">維基百科</a></td></tr>
+<tr><td>tuple</td><td>元組</td><td></td></tr>
 <tr><td>two’s complement</td><td>二補數</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E4%BA%8C%E8%A3%9C%E6%95%B8">維基百科</a></td></tr>
 <tr><td>type</td><td>型別</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E8%B3%87%E6%96%99%E9%A1%9E%E5%9E%8B">維基百科</a></td></tr>
 <tr><td>type inference</td><td>型別推斷</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E7%B1%BB%E5%9E%8B%E6%8E%A8%E8%AE%BA">維基百科</a></td></tr>
@@ -294,7 +297,6 @@
 <tr><td>build</td><td></td><td>名詞，例：create a &quot;build&quot;</td></tr>
 <tr><td>closures</td><td></td><td></td></tr>
 <tr><td>crates</td><td></td><td></td></tr>
-<tr><td>destructuring let</td><td></td><td>用於存取 tuple</td></tr>
 <tr><td>fully-strict</td><td></td><td></td></tr>
 <tr><td>hash</td><td></td><td></td></tr>
 <tr><td>import</td><td></td><td></td></tr>
@@ -303,7 +305,6 @@
 <tr><td>mata</td><td></td><td></td></tr>
 <tr><td>metaprogramming</td><td></td><td></td></tr>
 <tr><td>non-strict</td><td></td><td></td></tr>
-<tr><td>panic</td><td></td><td></td></tr>
 <tr><td>patches</td><td></td><td></td></tr>
 <tr><td>placeholder</td><td></td><td></td></tr>
 <tr><td>prelude</td><td></td><td>預先載入的函式庫</td></tr>
