--- a/ch03-03-how-functions-work.html
+++ b/ch03-03-how-functions-work.html
@@ -193,7 +193,7 @@ Another function.
 </code></pre>
 <p>程式碼會按照 <code>main</code> 函式中的順序執行。首先，「Hello, world!」的訊息會先顯示出來，再來才會呼叫 <code>another_function</code> 並印出它的訊息。</p>
 <h3><a class="header" href="#函式參數" id="函式參數">函式參數</a></h3>
-<p>函式也可以被定義成擁有<em>參數（parameters）<em>的，這是函式（signatures）中特殊的變數。當函式有參數時，你可以提供那些參數的確切數值。嚴格上來說，我們傳遞的數值會叫做</em>引數（arguments）</em>。但爲了方便起見，通常大家不太會去在意兩者的區別。雖然函式定義時才叫<em>參數</em>，傳遞數值時叫做<em>引數</em>，但很多時候會被人們拿來交互使用。</p>
+<p>函式也可以被定義成擁有<em>參數（parameters）<em>的，這是函式簽名（signatures）中特殊的變數。當函式有參數時，你可以提供那些參數的確切數值。嚴格上來說，我們傳遞的數值會叫做</em>引數（arguments）</em>。但爲了方便起見，通常大家不太會去在意兩者的區別。雖然函式定義時才叫<em>參數</em>，傳遞數值時叫做<em>引數</em>，但很多時候會被人們拿來交互使用。</p>
 <p>以下是加上參數後重新寫過的 <code>another_function</code> 範例：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
