--- a/ch08-02-strings.html
+++ b/ch08-02-strings.html
@@ -167,7 +167,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2><a class="header" href="#storing-utf-8-encoded-text-with-strings" id="storing-utf-8-encoded-text-with-strings">Storing UTF-8 Encoded Text with Strings</a></h2>
+                        <h2><a class="header" href="#用字串儲存-utf-8-編碼的文字" id="用字串儲存-utf-8-編碼的文字">用字串儲存 UTF-8 編碼的文字</a></h2>
 <p>We talked about strings in Chapter 4, but we’ll look at them in more depth now.
 New Rustaceans commonly get stuck on strings for a combination of three
 reasons: Rust’s propensity for exposing possible errors, strings being a more
