--- a/ch04-02-references-and-borrowing.html
+++ b/ch04-02-references-and-borrowing.html
@@ -167,14 +167,9 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2><a class="header" href="#references-and-borrowing" id="references-and-borrowing">References and Borrowing</a></h2>
-<p>The issue with the tuple code in Listing 4-5 is that we have to return the
-<code>String</code> to the calling function so we can still use the <code>String</code> after the
-call to <code>calculate_length</code>, because the <code>String</code> was moved into
-<code>calculate_length</code>.</p>
-<p>Here is how you would define and use a <code>calculate_length</code> function that has a
-reference to an object as a parameter instead of taking ownership of the
-value:</p>
+                        <h2><a class="header" href="#引用與借用" id="引用與借用">引用與借用</a></h2>
+<p>我們在範例 4-5 使用元組的問題在於，我們必須回傳 <code>String</code> 給呼叫的函式，我們才能繼續在呼叫 <code>calculate_length</code> 之後繼續使用 <code>String</code>，因爲 <code>String</code> 會被傳入 <code>calculate_length</code>。</p>
+<p>以下是我們定義並使用 <code>calculate_length</code> 時，在參數改用引用物件而非取得所有權的程式碼：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     let s1 = String::from(&quot;hello&quot;);
@@ -188,21 +183,13 @@ fn calculate_length(s: &amp;String) -&gt; usize {
     s.len()
 }
 </code></pre></pre>
-<p>First, notice that all the tuple code in the variable declaration and the
-function return value is gone. Second, note that we pass <code>&amp;s1</code> into
-<code>calculate_length</code> and, in its definition, we take <code>&amp;String</code> rather than
-<code>String</code>.</p>
-<p>These ampersands are <em>references</em>, and they allow you to refer to some value
-without taking ownership of it. Figure 4-5 shows a diagram.</p>
+<p>首先你會注意到原先變數宣告與函式回傳值會用到元組的地方都被更改了。再來注意到我們傳遞的是 <code>&amp;s1</code> 給 <code>calculate_length</code>，然後在定義時我們是取 <code>&amp;String</code> 而非 <code>String</code>。這些「&amp;」符號就是<em>引用（references）</em>，它們允許你不必獲取所有權來引用它。以下用圖示 4-5 示意。 </p>
 <img alt="&String s pointing at String s1" src="img/trpl04-05.svg" class="center" />
-<p><span class="caption">圖示 4-5: A diagram of <code>&amp;String s</code> pointing at <code>String s1</code></span></p>
+<p><span class="caption">圖示 4-5：顯示 <code>&amp;String s</code> 指向 <code>String s1</code> 的示意圖</span></p>
 <blockquote>
-<p>Note: The opposite of referencing by using <code>&amp;</code> is <em>dereferencing</em>, which is
-accomplished with the dereference operator, <code>*</code>. We’ll see some uses of the
-dereference operator in Chapter 8 and discuss details of dereferencing in
-Chapter 15.</p>
+<p>注意：使用 <code>&amp;</code> 引用的反向動作是 <em>解引用（dereferencing）</em>，使用的是解引用運算符號 <code>*</code>。我們會在第八章看到一些解引用的範例並在第 15 章詳細解釋解引用。</p>
 </blockquote>
-<p>Let’s take a closer look at the function call here:</p>
+<p>讓我們進一步看看函式的呼叫：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    let s1 = String::from(&quot;hello&quot;);
 
@@ -215,11 +202,8 @@ Chapter 15.</p>
 </span><span class="boring">    s.len()
 </span><span class="boring">}
 </span></code></pre></pre>
-<p>The <code>&amp;s1</code> syntax lets us create a reference that <em>refers</em> to the value of <code>s1</code>
-but does not own it. Because it does not own it, the value it points to will
-not be dropped when the reference goes out of scope.</p>
-<p>Likewise, the signature of the function uses <code>&amp;</code> to indicate that the type of
-the parameter <code>s</code> is a reference. Let’s add some explanatory annotations:</p>
+<p><code>&amp;s1</code> 語法讓我們可以建立一個指向 <code>s1</code> 數值的引用，但不會擁有它。因爲它並沒有所有權，它所指向的資料在引用離開作用域時並不會被丟棄。</p>
+<p>同樣地，函式簽名也是用 <code>&amp;</code> 說明參數 <code>s</code> 是個引用。讓我們加一些註解在範例上：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span><span class="boring">    let s1 = String::from(&quot;hello&quot;);
 </span><span class="boring">
@@ -228,21 +212,14 @@ the parameter <code>s</code> is a reference. Let’s add some explanatory annota
 </span><span class="boring">    println!(&quot;The length of '{}' is {}.&quot;, s1, len);
 </span><span class="boring">}
 </span><span class="boring">
-</span>fn calculate_length(s: &amp;String) -&gt; usize { // s is a reference to a String
+</span>fn calculate_length(s: &amp;String) -&gt; usize { // s 個 String 的引用
     s.len()
-} // Here, s goes out of scope. But because it does not have ownership of what
-  // it refers to, nothing happens.
+} // s 在此離開作用域，但因爲它沒有它所指向的資料的所有權
+  // 沒有任何動作發生
 </code></pre></pre>
-<p>The scope in which the variable <code>s</code> is valid is the same as any function
-parameter’s scope, but we don’t drop what the reference points to when it goes
-out of scope because we don’t have ownership. When functions have references as
-parameters instead of the actual values, we won’t need to return the values in
-order to give back ownership, because we never had ownership.</p>
-<p>We call having references as function parameters <em>borrowing</em>. As in real life,
-if a person owns something, you can borrow it from them. When you’re done, you
-have to give it back.</p>
-<p>So what happens if we try to modify something we’re borrowing? Try the code in
-Listing 4-6. Spoiler alert: it doesn’t work!</p>
+<p>變數 <code>s</code> 有效的作用域和任何函式參數的作用域一樣，但當引用離開作用域時，我們不會丟棄任何它指向的資料，因爲我們沒有所有權。當函式使用引用作爲參數而非實際數值時，我們不需要回傳數值來還所有權，因爲我們不曾擁有過。</p>
+<p>我們會稱呼函式用引用作爲參數叫做<em>借用（borrowing）</em>。就像現實世界一樣，如果有人擁有每項東西，他可以借用給你。當你使用完後，你就還給他。</p>
+<p>所以要是我們嘗試修改我們借用的東西會如何呢？請試試範例 4-6 的程式碼。直接劇透你：它執行不了的！</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore does_not_compile">fn main() {
     let s = String::from(&quot;hello&quot;);
@@ -254,8 +231,8 @@ fn change(some_string: &amp;String) {
     some_string.push_str(&quot;, world&quot;);
 }
 </code></pre>
-<p><span class="caption">範例 4-6: Attempting to modify a borrowed value</span></p>
-<p>Here’s the error:</p>
+<p><span class="caption">範例 4-6：嘗試修改借用的值</span></p>
+<p>以下是錯誤訊息：</p>
 <pre><code class="language-console">$ cargo run
    Compiling ownership v0.1.0 (file:///projects/ownership)
 error[E0596]: cannot borrow `*some_string` as mutable, as it is behind a `&amp;` reference
@@ -273,10 +250,9 @@ error: could not compile `ownership`.
 
 To learn more, run the command again with --verbose.
 </code></pre>
-<p>Just as variables are immutable by default, so are references. We’re not
-allowed to modify something we have a reference to.</p>
-<h3><a class="header" href="#mutable-references" id="mutable-references">Mutable References</a></h3>
-<p>We can fix the error in the code from Listing 4-6 with just a small tweak:</p>
+<p>如同變數預設是不可變，引用也是一樣的。我們不被允許修改我們引用的值。</p>
+<h3><a class="header" href="#可變引用" id="可變引用">可變引用</a></h3>
+<p>我們可以修正這項錯誤，只要在範例 4-6 做一點小修改就好：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     let mut s = String::from(&quot;hello&quot;);
@@ -288,11 +264,8 @@ fn change(some_string: &amp;mut String) {
     some_string.push_str(&quot;, world&quot;);
 }
 </code></pre></pre>
-<p>First, we had to change <code>s</code> to be <code>mut</code>. Then we had to create a mutable
-reference with <code>&amp;mut s</code> and accept a mutable reference with <code>some_string: &amp;mut String</code>.</p>
-<p>But mutable references have one big restriction: you can have only one mutable
-reference to a particular piece of data in a particular scope. This code will
-fail:</p>
+<p>首先我們將 <code>s</code> 加上了 <code>mut</code>，然後我們用 <code>&amp;mut s</code> 建立了一個可變引用，然後以 <code>some_string: &amp;mut String</code> 來接收這個可變引用。</p>
+<p>但是可變引用有個很大的限制：在特定作用域中的一個特定資料只能有一個可變引用。所以以下程式碼就會失敗：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore does_not_compile"><span class="boring">fn main() {
 </span>    let mut s = String::from(&quot;hello&quot;);
@@ -303,7 +276,7 @@ fail:</p>
     println!(&quot;{}, {}&quot;, r1, r2);
 <span class="boring">}
 </span></code></pre>
-<p>Here’s the error:</p>
+<p>以下是錯誤資訊：</p>
 <pre><code class="language-console">$ cargo run
    Compiling ownership v0.1.0 (file:///projects/ownership)
 error[E0499]: cannot borrow `s` as mutable more than once at a time
@@ -324,45 +297,37 @@ error: could not compile `ownership`.
 
 To learn more, run the command again with --verbose.
 </code></pre>
-<p>This restriction allows for mutation but in a very controlled fashion. It’s
-something that new Rustaceans struggle with, because most languages let you
-mutate whenever you’d like.</p>
-<p>The benefit of having this restriction is that Rust can prevent data races at
-compile time. A <em>data race</em> is similar to a race condition and happens when
-these three behaviors occur:</p>
+<p>這項限制允許了可變行爲，但是同時也受到一定程度的約束。這通常是新 Rustaceans 遭受挫折的地方，因爲多數語言都會任你去改變其值。</p>
+<p>這項限制的好處是 Rust 可以在編譯時期就防止資料競爭（data races）。<em>資料競爭</em>和競爭條件（race condition）類似，它會由以下三種行爲發生：</p>
 <ul>
-<li>Two or more pointers access the same data at the same time.</li>
-<li>At least one of the pointers is being used to write to the data.</li>
-<li>There’s no mechanism being used to synchronize access to the data.</li>
+<li>同時有兩個以上的指標存取同個資料。</li>
+<li>至少有一個指標在寫入資料。</li>
+<li>沒有針對資料的同步存取機制。</li>
 </ul>
-<p>Data races cause undefined behavior and can be difficult to diagnose and fix
-when you’re trying to track them down at runtime; Rust prevents this problem
-from happening because it won’t even compile code with data races!</p>
-<p>As always, we can use curly brackets to create a new scope, allowing for
-multiple mutable references, just not <em>simultaneous</em> ones:</p>
+<p>資料競爭會造成未定義行爲（undefined behavior），而且在執行時你通常是很難診斷並修正的。Rust 能夠阻止這樣的問題發生，因爲它不會讓有資料競爭的程式碼編譯通過！</p>
+<p>如往常一樣，我們可以用大括號來建立一個新的作用域來允許多個可變引用，只要不是同時擁有就好：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    let mut s = String::from(&quot;hello&quot;);
 
     {
         let r1 = &amp;mut s;
-    } // r1 goes out of scope here, so we can make a new reference with no problems.
+    } // r1 離開作用域，所以建立新的引用也不會有問題
 
     let r2 = &amp;mut s;
 <span class="boring">}
 </span></code></pre></pre>
-<p>A similar rule exists for combining mutable and immutable references. This code
-results in an error:</p>
+<p>類似的規則也存在於可變引用和不可變引用的組合中，以下程式碼就會產生錯誤：</p>
 <pre><code class="language-rust ignore does_not_compile"><span class="boring">fn main() {
 </span>    let mut s = String::from(&quot;hello&quot;);
 
-    let r1 = &amp;s; // no problem
-    let r2 = &amp;s; // no problem
-    let r3 = &amp;mut s; // BIG PROBLEM
+    let r1 = &amp;s; // 沒問題
+    let r2 = &amp;s; // 沒問題
+    let r3 = &amp;mut s; // 很有問題！
 
     println!(&quot;{}, {}, and {}&quot;, r1, r2, r3);
 <span class="boring">}
 </span></code></pre>
-<p>Here’s the error:</p>
+<p>以下是錯誤訊息：</p>
 <pre><code class="language-console">$ cargo run
    Compiling ownership v0.1.0 (file:///projects/ownership)
 error[E0502]: cannot borrow `s` as mutable because it is also borrowed as immutable
@@ -384,44 +349,25 @@ error: could not compile `ownership`.
 
 To learn more, run the command again with --verbose.
 </code></pre>
-<p>Whew! We <em>also</em> cannot have a mutable reference while we have an immutable one.
-Users of an immutable reference don’t expect the values to suddenly change out
-from under them! However, multiple immutable references are okay because no one
-who is just reading the data has the ability to affect anyone else’s reading of
-the data.</p>
-<p>Note that a reference’s scope starts from where it is introduced and continues
-through the last time that reference is used. For instance, this code will
-compile because the last usage of the immutable references occurs before the
-mutable reference is introduced:</p>
+<p>哇！看來我們<em>也不可以</em>在擁有不可變引用的同時擁有可變引用。擁有不可變引用的使用者可不希望有人暗地裡突然改變了值！不過數個不可變引用是沒問題的，因爲所有在讀取資料的人都無法影響其他人閱讀資料。</p>
+<p>請注意引用的作用域始於它被宣告的地方，一直到它最後一次引用被使用爲止。舉例來說以下程式就可以編譯，因爲不可變引用最後一次的使用在可變引用宣告之前：</p>
 <pre><pre class="playground"><code class="language-rust edition2018"><span class="boring">fn main() {
 </span>    let mut s = String::from(&quot;hello&quot;);
 
-    let r1 = &amp;s; // no problem
-    let r2 = &amp;s; // no problem
+    let r1 = &amp;s; // 沒問題
+    let r2 = &amp;s; // 沒問題
     println!(&quot;{} and {}&quot;, r1, r2);
-    // r1 and r2 are no longer used after this point
-
-    let r3 = &amp;mut s; // no problem
+    // r1 和 r2 從此不再使用
+    
+    let r3 = &amp;mut s; // 沒問題
     println!(&quot;{}&quot;, r3);
 <span class="boring">}
 </span></code></pre></pre>
-<p>The scopes of the immutable references <code>r1</code> and <code>r2</code> end after the <code>println!</code>
-where they are last used, which is before the mutable reference <code>r3</code> is
-created. These scopes don’t overlap, so this code is allowed.</p>
-<p>Even though borrowing errors may be frustrating at times, remember that it’s
-the Rust compiler pointing out a potential bug early (at compile time rather
-than at runtime) and showing you exactly where the problem is. Then you don’t
-have to track down why your data isn’t what you thought it was.</p>
-<h3><a class="header" href="#dangling-references" id="dangling-references">Dangling References</a></h3>
-<p>In languages with pointers, it’s easy to erroneously create a <em>dangling
-pointer</em>, a pointer that references a location in memory that may have been
-given to someone else, by freeing some memory while preserving a pointer to
-that memory. In Rust, by contrast, the compiler guarantees that references will
-never be dangling references: if you have a reference to some data, the
-compiler will ensure that the data will not go out of scope before the
-reference to the data does.</p>
-<p>Let’s try to create a dangling reference, which Rust will prevent with a
-compile-time error:</p>
+<p>不可變引用 <code>r1</code> 和 <code>r2</code> 的作用域在 <code>println!</code> 之後結束。這是它們最後一次使用到的地方，也就是在宣告可變引用 <code>r3</code> 之前。它們的作用域沒有重疊，所以程式碼是允許的。</p>
+<p>雖然借用錯誤有時是令人沮喪的，但請記得這是 Rust 編譯器希望提前（在編譯時而非執行時）指出潛在程式錯誤並告訴你問題的源頭在哪。這樣你就不必親自追蹤到你爲何你的資料不是你所想的那樣。</p>
+<h3><a class="header" href="#迷途引用" id="迷途引用">迷途引用</a></h3>
+<p>在有指標的語言中，通常都很容易不小心產生<em>迷途指標（dangling pointer）</em>。當資源已經被釋放但指標卻還留著，這樣的指標指向的地方很可能就已經被別人所有了。相反地，在 Rust 中編譯器會保證引用絕不會是迷途引用：如果你有某些資料的引用，編譯器會確保資料不會在引用結束前離開作用域。</p>
+<p>讓我們來嘗試產生迷途指標，看看 Rust 怎麼產生編譯期錯誤：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore does_not_compile">fn main() {
     let reference_to_nothing = dangle();
@@ -433,7 +379,7 @@ fn dangle() -&gt; &amp;String {
     &amp;s
 }
 </code></pre>
-<p>Here’s the error:</p>
+<p>以下是錯誤訊息：</p>
 <pre><code class="language-console">$ cargo run
    Compiling ownership v0.1.0 (file:///projects/ownership)
 error[E0106]: missing lifetime specifier
@@ -451,14 +397,11 @@ error: could not compile `ownership`.
 
 To learn more, run the command again with --verbose.
 </code></pre>
-<p>This error message refers to a feature we haven’t covered yet: lifetimes. We’ll
-discuss lifetimes in detail in Chapter 10. But, if you disregard the parts
-about lifetimes, the message does contain the key to why this code is a problem:</p>
+<p>此錯誤訊息包含了一個我們還沒介紹的功能：生命週期（lifetimes）。我們會在第十章詳細討論生命週期。就算我們先不管生命週期的部分，錯誤訊息仍然告訴了我們程式出錯的關鍵點：</p>
 <pre><code class="language-text">this function's return type contains a borrowed value, but there is no value
 for it to be borrowed from.
 </code></pre>
-<p>Let’s take a closer look at exactly what’s happening at each stage of our
-<code>dangle</code> code:</p>
+<p>讓我們進一步看看我們的 <code>dangle</code> 程式碼每一步發生了什麼：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore does_not_compile"><span class="boring">fn main() {
 </span><span class="boring">    let reference_to_nothing = dangle();
@@ -472,11 +415,8 @@ for it to be borrowed from.
 } // Here, s goes out of scope, and is dropped. Its memory goes away.
   // Danger!
 </code></pre>
-<p>Because <code>s</code> is created inside <code>dangle</code>, when the code of <code>dangle</code> is finished,
-<code>s</code> will be deallocated. But we tried to return a reference to it. That means
-this reference would be pointing to an invalid <code>String</code>. That’s no good! Rust
-won’t let us do this.</p>
-<p>The solution here is to return the <code>String</code> directly:</p>
+<p>因爲 <code>s</code> 是在 <code>dangle</code> 內產生的，當 <code>dangle</code> 程式碼結束時，<code>s</code> 會被釋放。但我們卻嘗試回傳引用。此引用會指向一個已經無效的 <code>String</code>。這看起來不太優！Rust 不允許我們這麼做。</p>
+<p>解決的辦法是直接回傳 <code>String</code> 就好：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span><span class="boring">    let string = no_dangle();
 </span><span class="boring">}
@@ -487,16 +427,21 @@ won’t let us do this.</p>
     s
 }
 </code></pre></pre>
-<p>This works without any problems. Ownership is moved out, and nothing is
-deallocated.</p>
-<h3><a class="header" href="#the-rules-of-references" id="the-rules-of-references">The Rules of References</a></h3>
-<p>Let’s recap what we’ve discussed about references:</p>
+<p>這樣就沒問題了。所有權轉移了出去，沒有任何值被釋放。</p>
+<h3><a class="header" href="#引用規則" id="引用規則">引用規則</a></h3>
+<p>讓我們來回顧我們討論到的引用規則：</p>
 <ul>
-<li>At any given time, you can have <em>either</em> one mutable reference <em>or</em> any
-number of immutable references.</li>
-<li>References must always be valid.</li>
+<li>在任何時候，我們要麼<em>只能有</em>一個可變引用，要麼可以有<em>任意數量</em>的不可變引用。</li>
+<li>引用必須永遠有效。</li>
 </ul>
-<p>Next, we’ll look at a different kind of reference: slices.</p>
+<p>接下來我們要來看看一個不太一樣的引用型別：slices。</p>
+<blockquote>
+<ul>
+<li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
+<li>commit: <a href="https://github.com/rust-lang/book/blob/d44317c3122b44fb713aba66cc295dee3453b24b/src/ch04-02-references-and-borrowing.md">d44317c</a></li>
+<li>updated: 2020-09-08</li>
+</ul>
+</blockquote>
 
                     </main>
 
