--- a/ch05-00-structs.html
+++ b/ch05-00-structs.html
@@ -167,16 +167,15 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#using-structs-to-structure-related-data" id="using-structs-to-structure-related-data">Using Structs to Structure Related Data</a></h1>
-<p>A <em>struct</em>, or <em>structure</em>, is a custom data type that lets you name and
-package together multiple related values that make up a meaningful group. If
-you’re familiar with an object-oriented language, a <em>struct</em> is like an
-object’s data attributes. In this chapter, we’ll compare and contrast tuples
-with structs, demonstrate how to use structs, and discuss how to define methods
-and associated functions to specify behavior associated with a struct’s data.
-Structs and enums (discussed in Chapter 6) are the building blocks for creating
-new types in your program’s domain to take full advantage of Rust’s compile
-time type checking.</p>
+                        <h1><a class="header" href="#使用結構體組織相關資料" id="使用結構體組織相關資料">使用結構體組織相關資料</a></h1>
+<p><em>struct</em>或*結構體（structure）*是個讓你命名並封裝數個相關數值爲單一組合的自定型別。如果你熟悉物件導向語言的話，<em>struct</em> 就像是物件的資料屬性。在本章節，我們會比較元組與結構體的差別，介紹如何使用結構體，並討論如何定義結構體資料的方法與相關函式行爲。結構體與將會在第六章提到的枚舉（enum）是 Rust 產生新型別的基本元件，它們能充分利用 Rust 的編譯時型別檢查。</p>
+<blockquote>
+<ul>
+<li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
+<li>commit: <a href="https://github.com/rust-lang/book/blob/d44317c3122b44fb713aba66cc295dee3453b24b/src/ch05-00-structs.md">d44317c</a></li>
+<li>updated: 2020-09-08</li>
+</ul>
+</blockquote>
 
                     </main>
 
