deploy: 57ec806368f7c5c4586da58a57f4f950182df4fe

--- a/appendix-08-terminology.html
+++ b/appendix-08-terminology.html
@@ -222,6 +222,7 @@
 <tr><td>function</td><td>函式</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E5%AD%90%E7%A8%8B%E5%BA%8F">維基百科</a></td></tr>
 <tr><td>generics</td><td>泛型</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E6%B3%9B%E5%9E%8B">維基百科</a></td></tr>
 <tr><td>identifier</td><td>標識符</td><td>參考：<a href="https://zh.wikipedia.org/wiki/%E6%A8%99%E8%AD%98%E7%AC%A6">維基百科</a></td></tr>
+<tr><td>import</td><td>匯入</td><td></td></tr>
 <tr><td>index</td><td>索引</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E7%B4%A2%E5%BC%95">維基百科</a></td></tr>
 <tr><td>instance</td><td>實體</td><td></td></tr>
 <tr><td>iterative</td><td>疊代</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E8%BF%AD%E4%BB%A3">維基百科</a></td></tr>
@@ -301,7 +302,6 @@
 <tr><td>crates</td><td></td><td></td></tr>
 <tr><td>fully-strict</td><td></td><td></td></tr>
 <tr><td>hash</td><td></td><td></td></tr>
-<tr><td>import</td><td></td><td></td></tr>
 <tr><td>linking</td><td></td><td></td></tr>
 <tr><td>master</td><td></td><td>git branch</td></tr>
 <tr><td>mata</td><td></td><td></td></tr>
