deploy: 5139066cd09125ab78da1becafe72ad628801cc3

--- a/ch06-01-defining-an-enum.html
+++ b/ch06-01-defining-an-enum.html
@@ -187,7 +187,7 @@
 </span><span class="boring">fn route(ip_kind: IpAddrKind) {}
 </span></code></pre></pre>
 <p><code>IpAddrKind</code> 現在成了能在我們程式碼任何地方使用的自訂資料型別。</p>
-<h3><a class="header" href="#enum-數值" id="enum-數值">Enum 數值</a></h3>
+<h3><a class="header" href="#枚舉數值" id="枚舉數值">枚舉數值</a></h3>
 <p>我們可以像這樣建立兩個不同變體的 <code>IpAddrKind</code> 實例：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">enum IpAddrKind {
 </span><span class="boring">    V4,
